--- a/Week4/logistic_regression.ipynb
+++ b/Week4/logistic_regression.ipynb
@@ -250,13 +250,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### If you made it this far with time to spare, you should attempt to implement logistic regression *by hand*. This may seem daunting at first, but this is nearly identical to our previous activity. The main difference is that your `y_pred` function has changed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<i><p style='text-align: right;'> <b>Authors:</b> Michelle Kuchera, Raghuram Ramanujan </p></i>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
