--- a/Week6/kNN.ipynb
+++ b/Week6/kNN.ipynb
@@ -29,7 +29,7 @@
    "id": "f357d40f-5bee-4554-810f-8b6e09c18a04",
    "metadata": {},
    "source": [
-    "The `sklearn` package contains build-in datasets and dataset generators to test machine learning methods. Use the `make_blobs` generator to generate two-dimensional data with two classes."
+    "The `sklearn` package contains build-in datasets and dataset generators to test machine learning methods. Use the `make_blobs` generator to generate data with two features and two classes."
    ]
   },
   {
