--- a/Week7/DecisionTress.ipynb
+++ b/Week7/DecisionTress.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "### Hmmm, should I buy this car?\n",
     "\n",
-    "<img src=\"https://www.mercedes-benz.com/de/fahrzeuge/personenwagen/mercedes-maybach/mercedes-maybach-s-klasse/_jcr_content/root/paragraph_copy_13046/paragraph-right/paragraphimage/image/MQ6-8-image-20201119134317/10-mercedes-benz-mercedes-maybach-s-klasse-2021-z223.jpeg\" width=\"400\" />\n",
+    "<img src=\"https://hips.hearstapps.com/autoweek/assets/s3fs-public/16c708_01.jpg?fill=768:510&resize=980:*\" width=\"400\" />\n",
     "\n",
     "We will use the [car evaluation database]((https://archive.ics.uci.edu/ml/datasets/Car+Evaluation)) to build a decision tree model that will determine the \"acceptability\" i.e. the *quality* of a car. \n",
     "\n",
