--- a/Week7/DecisionTress.ipynb
+++ b/Week7/DecisionTress.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "<img src=\"https://hips.hearstapps.com/autoweek/assets/s3fs-public/16c708_01.jpg?fill=768:510&resize=980:*\" width=\"400\" />\n",
     "\n",
-    "We will use the [car evaluation database]((https://archive.ics.uci.edu/ml/datasets/Car+Evaluation)) to build a decision tree model that will determine the \"acceptability\" i.e. the *quality* of a car. \n",
+    "We will use the [car evaluation database](https://archive.ics.uci.edu/dataset/19/car+evaluation) to build a decision tree model that will determine the \"acceptability\" i.e. the *quality* of a car. \n",
     "\n",
     "Here is some information about the data, which is in the file `car.data` (see `car.names` for more information):\n",
     "\n",
