--- a/Week7/DecisionTrees.ipynb
+++ b/Week7/DecisionTrees.ipynb
@@ -73,7 +73,7 @@
     "<!-- p_Y\\log_2{p_Y} - p_N\\log_2{p_N} -->\n",
     "$$Gain(D, feature) = S(D) - \\sum_{i=1}^N\\frac{|D_i|}{|D|}Entropy(D_i) $$\n",
     "\n",
-    "Recall that $|S|$ and $|S_i|$ represent the number of training examples within each dataset.\n",
+    "Recall that $|D|$ and $|D_i|$ represent the number of training examples within each dataset.\n",
     "\n",
     "\n",
     "### Computational Notes:\n",
